# saxo

./: .eslintignore  README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js  vite.config.mjs
src/: Saxo.tsx  hooks.ts  index.css  index.tsx
src-tauri/: Cargo.toml  experiment.rs  tauri.conf.json  test.txt
src-tauri/icons/: icon.icns
src/routes/: index.svelte
