[package]
name = "saxo"
version = "0.1.0"
description = "Your Path of Exile chronicler"
authors = ["Bjørn Madsen <bm@aeons.dk>"]
license = "MIT"
repository = "https://github.com/aeons/saxo"
default-run = "saxo"
edition = "2021"
rust-version = "1.57"

[[bin]]
name = "dev"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["api-all"] }
tauri-plugin-window-state = "0.1"
notify = "5.0.0-pre.15"
eyre = "0.6.8"
tokio = { version = "1.19", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
    "io-util"
] }
tokio-util = "0.7.3"
tokio-stream = "0.1.9"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
